--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100;1,300&display=swap');
 
-body{
+body {
     font-family: Roboto;
     margin: 0;
     padding: 0;
     
 }
 
-.top{
-    background-color: #1F2937;
-    padding: 0px 200px;
+.top, .middle, .quote-container, .call-to-action {
+    padding: 0px 200px 150px;
 }
 
-.header{
+.top {
+    background-color: #1F2937;
+}
+
+.header {
     display: flex;
     padding: 30px;
     justify-content: space-between;
@@ -23,7 +26,7 @@ body{
     
 }
 
-ul{
+ul {
     display: flex;
     gap: 18px;
     list-style: none;
@@ -32,7 +35,7 @@ ul{
     
 }
 
-.title{
+.title {
     display: flex;
     color: #F9FAF8;
     font-weight: 700;
@@ -41,7 +44,7 @@ ul{
     align-items: center;
 }
 
-.title-container{
+.title-container {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -49,18 +52,18 @@ ul{
     padding: 30px;
 }
 
-.text{
+.text {
     color: #E5E7Eb;
     font-size: 18px;
     font-weight: 100;
 }
 
-.hero-img{
+.hero-img {
     max-width: 450px;
     height: auto;
 }
 
-button{
+button {
     max-width: 100px;
     min-height: 30px;
     color: #F9FAF8;
@@ -69,3 +72,68 @@ button{
     border: none;
 
 }
+
+.middle {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 40px;
+    gap: 40px;
+}
+
+.middle-container {
+    display: flex;
+    justify-content: space-evenly; 
+    
+}
+
+.info-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 20px;
+    border: 5px solid #3882f6;
+}
+
+.img-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    flex-wrap: wrap;
+    color: #1F2937;
+    font-size: 16px;
+    font-weight: 150;
+}
+
+.quote-container {
+    background-color: #E5E7Eb;
+    display: flex;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 200;
+    color: #1F2937;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 0px;
+}
+
+.quote {
+    width: 790px;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.quote-credit{
+    color: #1F2937;
+    font-size: 18px;
+    font-weight: 700;
+    font-style: normal;
+}
+
+
+
+
