--- a/style.css
+++ b/style.css
@@ -64,12 +64,13 @@ ul {
 }
 
 button {
-    max-width: 100px;
-    min-height: 30px;
+    width: 100px;
+    height: 30px;
     color: #F9FAF8;
+    border: 1px solid #F9FAF8;
     background-color: #3882f6;
     border-radius: 10px;
-    border: none;
+   
 
 }
 
@@ -117,7 +118,8 @@ button {
     color: #1F2937;
     justify-content: center;
     align-items: center;
-    padding: 100px 0px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .quote {
@@ -133,6 +135,29 @@ button {
     font-weight: 700;
     font-style: normal;
 }
+
+.call-to-action {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.sign-up-container {
+    color: #F9FAF8;
+    font-weight: 700;
+    font-size: 24px;
+    background-color: #3882f6;
+    border-radius: 10px;
+    padding: 50px 125px;
+}
+
+.sign-up {
+    display: flex;
+    font-weight: 200;
+    font-size: 16px;
+    justify-content: space-between;
+    
+}
+
 
 
 
