--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ button {
     border: 1px solid #F9FAF8;
     background-color: #3882f6;
     border-radius: 10px;
-   
 
 }
 
@@ -156,6 +155,15 @@ button {
     font-size: 16px;
     justify-content: space-between;
     
+}
+
+.footer {
+    height: 100px;
+    display: flex;
+    color: #F9FAF8;
+    background-color: #1F2937;
+    justify-content: center;
+    align-items: center;
 }
 
 
